# Modelica_DeviceDrivers

Modelica_DeviceDrivers/: simulate.mos
Modelica_DeviceDrivers/Blocks/: Communication.mo  Interfaces.mo
Modelica_DeviceDrivers/Blocks/Examples/: Arduino_readInt.mo  Pendulum_OPCUA.mo  TestOPC_UA_Server.mo  TestOPC_UA_Server2.mo  TestOPC_UA_ServerClient.mo  TestSerialPackager_PCAN_Accel.mo  TestSerialPackager_PCAN_Angles.mo  TestSerialPackager_SerialPortReadWrite.mo  TestSerialPackager_TCPIP.mo  package.order
Modelica_DeviceDrivers/Communication/: OPC_UA_Client.mo  OPC_UA_Client_.mo  OPC_UA_Server.mo  OPC_UA_Server_.mo  PCAN.mo  PCAN_.mo  package.order
Modelica_DeviceDrivers/Resources/Include/: MDDPCAN.h  MDDSerialPort.h  MDDopcuaServer.h  open62541Wrapper.h
Modelica_DeviceDrivers/Resources/src/OPCUA62541Wrapper/: CMakeLists.txt  copyLib.cmd
Modelica_DeviceDrivers/Resources/src/OPCUA62541Wrapper/include/: OPCUA62541Wrapper.h
Modelica_DeviceDrivers/Resources/src/OPCUA62541Wrapper/src/: opcuaServer.c
Modelica_DeviceDrivers/Resources/src/open62541Wrapper/: CMakeLists.txt  READEM.txt  copyLib.cmd  opcuaClient.c  opcuaServer.c  open62541.c  open62541.h  open62541Wrapper.h
Modelica_DeviceDrivers/Resources/src/open62541Wrapper/include/: OPCUA62541Wrapper.h  open62541.h
Modelica_DeviceDrivers/Resources/src/open62541Wrapper/src/: opcuaServer.c
Modelica_DeviceDrivers/Resources/test/Communication/: test_MDDTCPIPSocketServer.c
